# uPick-Ocaml

./: .dockerignore  .env  .merlin  .ocamlinit  Dockerfile.save  INSTALL.txt  LOC.txt  Makefile  README.md  _tags  alice.json  app_state.ml  app_state.mli  authors.mli  db.ml  db.mli  dbquery.ml  dbquery.mli  dune  dune-project  fast.json  groups.ml  groups.mli  jsonDef  jsonDef.json  json_helpers.ml  json_helpers.mli  main.byte  main.ml  ocaml_threads  output_state.json  paste_here.ml  restaurant.ml  restaurant.mli  result.json  sample.json  script.byte  script.ml  state.json  test.byte  (+9 more)
_build/default/: .merlin  .ocamlinit  README.md  _tags  constants.ml  db.ml  db.mli  dbquery.ml  dune  groups.mli  json_helpers.ml  main.ml  paste_here.ml  script.ml
_build/default/.dune/: configurator  configurator.v2
_build/default/.main.eobjs/: app_state.impl.all-deps  authors.ml.d  constants.ml.d  db.ml.d  dbquery.ml.d  dune__exe.ml-gen  dune__exe__App_state.impl.all-deps  dune__exe__Dbquery.impl.all-deps  dune__exe__Main.impl.all-deps  dune__exe__Restaurant.impl.all-deps  dune__exe__Script.impl.all-deps  groups.impl.all-deps  groups.ml.d  json_helpers.mli.d  main.ml.d  paste_here.ml.d  script.impl.all-deps  script.ml.d  user.ml.d
_build/default/.script.eobjs/: script.ml.d
_build/default/.unit_test.eobjs/: dune__exe.ml-gen  dune__exe__Unit_test.impl.all-deps  jsons.ml.d  main.ml.d
_build/default/demo_code/: script.mli
_build/default/lib/: .merlin  authors.ml  db.ml  db.mli  dbquery.ml  dbquery.mli  dune  lib.cmxa  lib.ml-gen  main.ml  search.ml  search.mli  server.ml  (+1 more)
(+430 files in other folders)
